# voxswap-translator

./: .gitignore  CLAUDE.md  PROJECT.md  README.md  check-uboot.txt
android/box/benchmark/: recv-mix-bench.c
android/box/config/: bluetooth.conf  hostapd.conf
android/box/src/: auracast-broadcast.h  settings-server.c  settings-server.h  stream-receiver.c  wifi-hotspot.h
app/: .gitignore  app.json  metro.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
app-v2/: README.md  plan-3-network-client.md  plan-4-wire-pipeline.md  plan.md  research.md
app-v2/app/: build.gradle
app/.run/: app.run.xml
app/app/: build.gradle
app/plugins/: with-large-heap.js
app/src/app/: _layout.tsx  index.tsx  language-select.tsx  model-download.tsx  settings.tsx
app/src/components/: audio-level.tsx  connection-status.tsx  language-picker.tsx
app/src/constants/: colors.ts  icons.ts  index.ts  models.ts  nllb-languages.ts  spacing.ts  typography.ts
app/src/hooks/: use-audio-recorder.ts  use-battery-monitor.ts  use-connection.ts  use-pipeline.ts  (+2 more)
box/: CMakeLists.txt
box/benchmark/: send-streams.py
box/src/: audio-mixer.c  audio-mixer.h  auracast-broadcast.c  main.c  settings-server.c  settings-server.h  stream-receiver.c  stream-receiver.h  wifi-hotspot.c  wifi-hotspot.h
box/yocto/: build-image.sh
docs/: board-check.txt  email-to-omar.txt  findings.md  plan.md  research.md  sona-if573-integration-plan.md  todo-box.md  todo-mobile.md  todo.md
docs/client/: reply-gonzalo.txt
docs/images/: README.md
docs/research/: library-research.md  streaming-translation.md
jetson/: .gitignore  CLAUDE.md
(+235 files in other folders)
